# metro_card

./: pyproject.toml
sample_input/: input1.txt  input2.txt
